// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI/Dropdown default 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "24px",
              "width": "100%",
            }
          }
        >
          <Dropdown
            ariaLabel=""
            buttonClassName=""
            className=""
            glyph="filter"
            label="Toggle"
          >
            <div
              className="root"
            >
              <ForwardRef(Role)
                className="button"
                state={
                  Object {
                    "activeId": undefined,
                    "anchorRect": null,
                    "anchorRef": Object {
                      "current": <button
                        aria-controls="id-hrmged"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-nx53fb"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "animated": false,
                    "animating": false,
                    "arrowPadding": 4,
                    "arrowRef": Object {
                      "current": null,
                    },
                    "autoFocusOnShow": false,
                    "baseRef": Object {
                      "current": <div
                        aria-label="Toggle"
                        aria-orientation="vertical"
                        class="dropdown"
                        data-dialog=""
                        hidden=""
                        id="id-hrmged"
                        role="menu"
                        style="position: relative; display: none;"
                        tabindex="-1"
                      >
                        <ul>
                          <li>
                            Option 1
                          </li>
                          <li>
                            Option 2
                          </li>
                        </ul>
                      </div>,
                    },
                    "contentElement": <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      class="dropdown"
                      data-dialog=""
                      hidden=""
                      id="id-hrmged"
                      role="menu"
                      style="position: relative; display: none;"
                      tabindex="-1"
                    >
                      <ul>
                        <li>
                          Option 1
                        </li>
                        <li>
                          Option 2
                        </li>
                      </ul>
                    </div>,
                    "currentPlacement": "bottom-start",
                    "disclosureRef": Object {
                      "current": <button
                        aria-controls="id-hrmged"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-nx53fb"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "down": [Function],
                    "first": [Function],
                    "fixed": false,
                    "flip": true,
                    "focusLoop": false,
                    "focusShift": false,
                    "focusWrap": false,
                    "gutter": undefined,
                    "hide": [Function],
                    "hideAll": [Function],
                    "hideTimeout": 0,
                    "includesBaseElement": false,
                    "initialFocus": "container",
                    "items": Array [],
                    "last": [Function],
                    "mounted": false,
                    "move": [Function],
                    "moves": 0,
                    "next": [Function],
                    "orientation": "vertical",
                    "padding": 8,
                    "placement": "bottom-start",
                    "popoverRef": Object {
                      "current": <div
                        role="presentation"
                        style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                      >
                        <div
                          aria-label="Toggle"
                          aria-orientation="vertical"
                          class="dropdown"
                          data-dialog=""
                          hidden=""
                          id="id-hrmged"
                          role="menu"
                          style="position: relative; display: none;"
                          tabindex="-1"
                        >
                          <ul>
                            <li>
                              Option 1
                            </li>
                            <li>
                              Option 2
                            </li>
                          </ul>
                        </div>
                      </div>,
                    },
                    "preventOverflow": true,
                    "previous": [Function],
                    "registerItem": [Function],
                    "render": [Function],
                    "renderCallback": undefined,
                    "rtl": false,
                    "sameWidth": false,
                    "setActiveId": [Function],
                    "setAnchorRect": [Function],
                    "setAutoFocusOnShow": [Function],
                    "setContentElement": [Function],
                    "setInitialFocus": [Function],
                    "setItems": [Function],
                    "setMoves": [Function],
                    "setValue": [Function],
                    "setValues": [Function],
                    "setVisible": [Function],
                    "shift": 0,
                    "show": [Function],
                    "showTimeout": 150,
                    "stopAnimation": [Function],
                    "timeout": 150,
                    "toggle": [Function],
                    "up": [Function],
                    "values": Object {},
                    "virtualFocus": false,
                    "visible": false,
                  }
                }
                tabIndex={null}
              >
                <button
                  aria-controls="id-hrmged"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="button"
                  data-command=""
                  data-disclosure=""
                  id="id-nx53fb"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  tabIndex={null}
                  type="button"
                >
                  <FlexStack
                    as="div"
                    className=""
                    space="xxxsmall"
                  >
                    <div
                      className="root space--xxxsmall"
                    >
                      <Icon
                        as="span"
                        className="item labelIcon"
                        glyph="filter"
                        key=".0"
                        size="medium"
                      >
                        <span
                          className="root item labelIcon medium"
                        >
                          <svg
                            className="icon"
                          >
                            <use
                              xlinkHref="#filter"
                            />
                          </svg>
                        </span>
                      </Icon>
                      <div
                        className="item"
                        key=".1"
                      >
                        Toggle
                      </div>
                    </div>
                  </FlexStack>
                </button>
              </ForwardRef(Role)>
              <ForwardRef(Role)
                aria-label="Toggle"
                className="dropdown"
                state={
                  Object {
                    "activeId": undefined,
                    "anchorRect": null,
                    "anchorRef": Object {
                      "current": <button
                        aria-controls="id-hrmged"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-nx53fb"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "animated": false,
                    "animating": false,
                    "arrowPadding": 4,
                    "arrowRef": Object {
                      "current": null,
                    },
                    "autoFocusOnShow": false,
                    "baseRef": Object {
                      "current": <div
                        aria-label="Toggle"
                        aria-orientation="vertical"
                        class="dropdown"
                        data-dialog=""
                        hidden=""
                        id="id-hrmged"
                        role="menu"
                        style="position: relative; display: none;"
                        tabindex="-1"
                      >
                        <ul>
                          <li>
                            Option 1
                          </li>
                          <li>
                            Option 2
                          </li>
                        </ul>
                      </div>,
                    },
                    "contentElement": <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      class="dropdown"
                      data-dialog=""
                      hidden=""
                      id="id-hrmged"
                      role="menu"
                      style="position: relative; display: none;"
                      tabindex="-1"
                    >
                      <ul>
                        <li>
                          Option 1
                        </li>
                        <li>
                          Option 2
                        </li>
                      </ul>
                    </div>,
                    "currentPlacement": "bottom-start",
                    "disclosureRef": Object {
                      "current": <button
                        aria-controls="id-hrmged"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-nx53fb"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "down": [Function],
                    "first": [Function],
                    "fixed": false,
                    "flip": true,
                    "focusLoop": false,
                    "focusShift": false,
                    "focusWrap": false,
                    "gutter": undefined,
                    "hide": [Function],
                    "hideAll": [Function],
                    "hideTimeout": 0,
                    "includesBaseElement": false,
                    "initialFocus": "container",
                    "items": Array [],
                    "last": [Function],
                    "mounted": false,
                    "move": [Function],
                    "moves": 0,
                    "next": [Function],
                    "orientation": "vertical",
                    "padding": 8,
                    "placement": "bottom-start",
                    "popoverRef": Object {
                      "current": <div
                        role="presentation"
                        style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                      >
                        <div
                          aria-label="Toggle"
                          aria-orientation="vertical"
                          class="dropdown"
                          data-dialog=""
                          hidden=""
                          id="id-hrmged"
                          role="menu"
                          style="position: relative; display: none;"
                          tabindex="-1"
                        >
                          <ul>
                            <li>
                              Option 1
                            </li>
                            <li>
                              Option 2
                            </li>
                          </ul>
                        </div>
                      </div>,
                    },
                    "preventOverflow": true,
                    "previous": [Function],
                    "registerItem": [Function],
                    "render": [Function],
                    "renderCallback": undefined,
                    "rtl": false,
                    "sameWidth": false,
                    "setActiveId": [Function],
                    "setAnchorRect": [Function],
                    "setAutoFocusOnShow": [Function],
                    "setContentElement": [Function],
                    "setInitialFocus": [Function],
                    "setItems": [Function],
                    "setMoves": [Function],
                    "setValue": [Function],
                    "setValues": [Function],
                    "setVisible": [Function],
                    "shift": 0,
                    "show": [Function],
                    "showTimeout": 150,
                    "stopAnimation": [Function],
                    "timeout": 150,
                    "toggle": [Function],
                    "up": [Function],
                    "values": Object {},
                    "virtualFocus": false,
                    "visible": false,
                  }
                }
              >
                <HeadingLevel>
                  <div
                    role="presentation"
                    style={
                      Object {
                        "position": "fixed",
                      }
                    }
                  >
                    <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      className="dropdown"
                      data-dialog=""
                      hidden={true}
                      id="id-hrmged"
                      onAnimationEnd={[Function]}
                      onBlur={[Function]}
                      onBlurCapture={[Function]}
                      onClickCapture={[Function]}
                      onFocus={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onKeyDownCapture={[Function]}
                      onKeyPressCapture={[Function]}
                      onKeyUpCapture={[Function]}
                      onMouseDown={[Function]}
                      onMouseDownCapture={[Function]}
                      onTransitionEnd={[Function]}
                      role="menu"
                      style={
                        Object {
                          "display": "none",
                          "position": "relative",
                        }
                      }
                      tabIndex={-1}
                    >
                      <ul>
                        <li>
                          Option 1
                        </li>
                        <li>
                          Option 2
                        </li>
                      </ul>
                    </div>
                  </div>
                </HeadingLevel>
              </ForwardRef(Role)>
            </div>
          </Dropdown>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;

exports[`Storyshots UI/Dropdown with render function 1`] = `
<div>
  <Component>
    <MemoryRouter
      initialEntries={
        Array [
          Object {
            "key": "home",
            "pathname": "/",
          },
        ]
      }
    >
      <Router
        history={
          Object {
            "action": "POP",
            "block": [Function],
            "canGo": [Function],
            "createHref": [Function],
            "entries": Array [
              Object {
                "hash": "",
                "key": "home",
                "pathname": "/",
                "search": "",
              },
            ],
            "go": [Function],
            "goBack": [Function],
            "goForward": [Function],
            "index": 0,
            "length": 1,
            "listen": [Function],
            "location": Object {
              "hash": "",
              "key": "home",
              "pathname": "/",
              "search": "",
            },
            "push": [Function],
            "replace": [Function],
          }
        }
      >
        <div
          style={
            Object {
              "height": "100%",
              "padding": "24px",
              "width": "100%",
            }
          }
        >
          <Dropdown
            ariaLabel=""
            buttonClassName=""
            className=""
            glyph="filter"
            label="Toggle"
          >
            <div
              className="root"
            >
              <ForwardRef(Role)
                className="button"
                state={
                  Object {
                    "activeId": undefined,
                    "anchorRect": null,
                    "anchorRef": Object {
                      "current": <button
                        aria-controls="id-6amckl"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-97mahm"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "animated": false,
                    "animating": false,
                    "arrowPadding": 4,
                    "arrowRef": Object {
                      "current": null,
                    },
                    "autoFocusOnShow": false,
                    "baseRef": Object {
                      "current": <div
                        aria-label="Toggle"
                        aria-orientation="vertical"
                        class="dropdown"
                        data-dialog=""
                        hidden=""
                        id="id-6amckl"
                        role="menu"
                        style="position: relative; display: none;"
                        tabindex="-1"
                      >
                        <button
                          type="button"
                        >
                          Toggle dropdown
                        </button>
                      </div>,
                    },
                    "contentElement": <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      class="dropdown"
                      data-dialog=""
                      hidden=""
                      id="id-6amckl"
                      role="menu"
                      style="position: relative; display: none;"
                      tabindex="-1"
                    >
                      <button
                        type="button"
                      >
                        Toggle dropdown
                      </button>
                    </div>,
                    "currentPlacement": "bottom-start",
                    "disclosureRef": Object {
                      "current": <button
                        aria-controls="id-6amckl"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-97mahm"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "down": [Function],
                    "first": [Function],
                    "fixed": false,
                    "flip": true,
                    "focusLoop": false,
                    "focusShift": false,
                    "focusWrap": false,
                    "gutter": undefined,
                    "hide": [Function],
                    "hideAll": [Function],
                    "hideTimeout": 0,
                    "includesBaseElement": false,
                    "initialFocus": "container",
                    "items": Array [],
                    "last": [Function],
                    "mounted": false,
                    "move": [Function],
                    "moves": 0,
                    "next": [Function],
                    "orientation": "vertical",
                    "padding": 8,
                    "placement": "bottom-start",
                    "popoverRef": Object {
                      "current": <div
                        role="presentation"
                        style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                      >
                        <div
                          aria-label="Toggle"
                          aria-orientation="vertical"
                          class="dropdown"
                          data-dialog=""
                          hidden=""
                          id="id-6amckl"
                          role="menu"
                          style="position: relative; display: none;"
                          tabindex="-1"
                        >
                          <button
                            type="button"
                          >
                            Toggle dropdown
                          </button>
                        </div>
                      </div>,
                    },
                    "preventOverflow": true,
                    "previous": [Function],
                    "registerItem": [Function],
                    "render": [Function],
                    "renderCallback": undefined,
                    "rtl": false,
                    "sameWidth": false,
                    "setActiveId": [Function],
                    "setAnchorRect": [Function],
                    "setAutoFocusOnShow": [Function],
                    "setContentElement": [Function],
                    "setInitialFocus": [Function],
                    "setItems": [Function],
                    "setMoves": [Function],
                    "setValue": [Function],
                    "setValues": [Function],
                    "setVisible": [Function],
                    "shift": 0,
                    "show": [Function],
                    "showTimeout": 150,
                    "stopAnimation": [Function],
                    "timeout": 150,
                    "toggle": [Function],
                    "up": [Function],
                    "values": Object {},
                    "virtualFocus": false,
                    "visible": false,
                  }
                }
                tabIndex={null}
              >
                <button
                  aria-controls="id-6amckl"
                  aria-expanded={false}
                  aria-haspopup="menu"
                  className="button"
                  data-command=""
                  data-disclosure=""
                  id="id-97mahm"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onClickCapture={[Function]}
                  onFocus={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onKeyDownCapture={[Function]}
                  onKeyPressCapture={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseDownCapture={[Function]}
                  onMouseMove={[Function]}
                  tabIndex={null}
                  type="button"
                >
                  <FlexStack
                    as="div"
                    className=""
                    space="xxxsmall"
                  >
                    <div
                      className="root space--xxxsmall"
                    >
                      <Icon
                        as="span"
                        className="item labelIcon"
                        glyph="filter"
                        key=".0"
                        size="medium"
                      >
                        <span
                          className="root item labelIcon medium"
                        >
                          <svg
                            className="icon"
                          >
                            <use
                              xlinkHref="#filter"
                            />
                          </svg>
                        </span>
                      </Icon>
                      <div
                        className="item"
                        key=".1"
                      >
                        Toggle
                      </div>
                    </div>
                  </FlexStack>
                </button>
              </ForwardRef(Role)>
              <ForwardRef(Role)
                aria-label="Toggle"
                className="dropdown"
                state={
                  Object {
                    "activeId": undefined,
                    "anchorRect": null,
                    "anchorRef": Object {
                      "current": <button
                        aria-controls="id-6amckl"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-97mahm"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "animated": false,
                    "animating": false,
                    "arrowPadding": 4,
                    "arrowRef": Object {
                      "current": null,
                    },
                    "autoFocusOnShow": false,
                    "baseRef": Object {
                      "current": <div
                        aria-label="Toggle"
                        aria-orientation="vertical"
                        class="dropdown"
                        data-dialog=""
                        hidden=""
                        id="id-6amckl"
                        role="menu"
                        style="position: relative; display: none;"
                        tabindex="-1"
                      >
                        <button
                          type="button"
                        >
                          Toggle dropdown
                        </button>
                      </div>,
                    },
                    "contentElement": <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      class="dropdown"
                      data-dialog=""
                      hidden=""
                      id="id-6amckl"
                      role="menu"
                      style="position: relative; display: none;"
                      tabindex="-1"
                    >
                      <button
                        type="button"
                      >
                        Toggle dropdown
                      </button>
                    </div>,
                    "currentPlacement": "bottom-start",
                    "disclosureRef": Object {
                      "current": <button
                        aria-controls="id-6amckl"
                        aria-expanded="false"
                        aria-haspopup="menu"
                        class="button"
                        data-command=""
                        data-disclosure=""
                        id="id-97mahm"
                        type="button"
                      >
                        <div
                          class="root space--xxxsmall"
                        >
                          <span
                            class="root item labelIcon medium"
                          >
                            <svg
                              class="icon"
                            >
                              <use
                                xlink:href="#filter"
                              />
                            </svg>
                          </span>
                          <div
                            class="item"
                          >
                            Toggle
                          </div>
                        </div>
                      </button>,
                    },
                    "down": [Function],
                    "first": [Function],
                    "fixed": false,
                    "flip": true,
                    "focusLoop": false,
                    "focusShift": false,
                    "focusWrap": false,
                    "gutter": undefined,
                    "hide": [Function],
                    "hideAll": [Function],
                    "hideTimeout": 0,
                    "includesBaseElement": false,
                    "initialFocus": "container",
                    "items": Array [],
                    "last": [Function],
                    "mounted": false,
                    "move": [Function],
                    "moves": 0,
                    "next": [Function],
                    "orientation": "vertical",
                    "padding": 8,
                    "placement": "bottom-start",
                    "popoverRef": Object {
                      "current": <div
                        role="presentation"
                        style="position: absolute; left: 0px; top: 0px; margin: 0px;"
                      >
                        <div
                          aria-label="Toggle"
                          aria-orientation="vertical"
                          class="dropdown"
                          data-dialog=""
                          hidden=""
                          id="id-6amckl"
                          role="menu"
                          style="position: relative; display: none;"
                          tabindex="-1"
                        >
                          <button
                            type="button"
                          >
                            Toggle dropdown
                          </button>
                        </div>
                      </div>,
                    },
                    "preventOverflow": true,
                    "previous": [Function],
                    "registerItem": [Function],
                    "render": [Function],
                    "renderCallback": undefined,
                    "rtl": false,
                    "sameWidth": false,
                    "setActiveId": [Function],
                    "setAnchorRect": [Function],
                    "setAutoFocusOnShow": [Function],
                    "setContentElement": [Function],
                    "setInitialFocus": [Function],
                    "setItems": [Function],
                    "setMoves": [Function],
                    "setValue": [Function],
                    "setValues": [Function],
                    "setVisible": [Function],
                    "shift": 0,
                    "show": [Function],
                    "showTimeout": 150,
                    "stopAnimation": [Function],
                    "timeout": 150,
                    "toggle": [Function],
                    "up": [Function],
                    "values": Object {},
                    "virtualFocus": false,
                    "visible": false,
                  }
                }
              >
                <HeadingLevel>
                  <div
                    role="presentation"
                    style={
                      Object {
                        "position": "fixed",
                      }
                    }
                  >
                    <div
                      aria-label="Toggle"
                      aria-orientation="vertical"
                      className="dropdown"
                      data-dialog=""
                      hidden={true}
                      id="id-6amckl"
                      onAnimationEnd={[Function]}
                      onBlur={[Function]}
                      onBlurCapture={[Function]}
                      onClickCapture={[Function]}
                      onFocus={[Function]}
                      onFocusCapture={[Function]}
                      onKeyDown={[Function]}
                      onKeyDownCapture={[Function]}
                      onKeyPressCapture={[Function]}
                      onKeyUpCapture={[Function]}
                      onMouseDown={[Function]}
                      onMouseDownCapture={[Function]}
                      onTransitionEnd={[Function]}
                      role="menu"
                      style={
                        Object {
                          "display": "none",
                          "position": "relative",
                        }
                      }
                      tabIndex={-1}
                    >
                      <button
                        onClick={[Function]}
                        type="button"
                      >
                        Toggle dropdown
                      </button>
                    </div>
                  </div>
                </HeadingLevel>
              </ForwardRef(Role)>
            </div>
          </Dropdown>
        </div>
      </Router>
    </MemoryRouter>
  </Component>
  <IconSprite
    height="16"
    style={
      Object {
        "height": 0,
        "position": "absolute",
        "width": 0,
      }
    }
    width="16"
  >
    <svg
      height="16"
      style={
        Object {
          "height": 0,
          "position": "absolute",
          "width": 0,
        }
      }
      width="16"
    >
      <symbol
        className="feather feather-arrow-down"
        fill="none"
        id="arrow"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 5v14M19 12l-7 7-7-7"
        />
      </symbol>
      <symbol
        className="feather feather-arrow-right-circle"
        fill="none"
        id="arrow-right-circle"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 16l4-4-4-4M8 12h8"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="cancel"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-clock"
        fill="none"
        id="clock"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M12 6v6l4 2"
        />
      </symbol>
      <symbol
        className="feather feather-x-circle"
        fill="none"
        id="close"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M15 9l-6 6M9 9l6 6"
        />
      </symbol>
      <symbol
        className="feather feather-git-commit"
        fill="none"
        id="commit"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="4"
        />
        <path
          d="M1.05 12H7M17.01 12h5.95"
        />
      </symbol>
      <symbol
        className="feather feather-bar-chart"
        fill="none"
        id="filter"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 20V10M18 20V4M6 20v-4"
        />
      </symbol>
      <symbol
        className="feather feather-help-circle"
        fill="none"
        id="help"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 015.83 1c0 2-3 3-3 3M12 17h.01"
        />
      </symbol>
      <symbol
        className="feather feather-menu"
        fill="none"
        id="menu"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12h18M3 6h18M3 18h18"
        />
      </symbol>
      <symbol
        fill="currentColor"
        id="sort"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 18h6v-2H3v2zM3 6v2h18V6H3zm0 7h12v-2H3v2z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </symbol>
      <symbol
        className="feather feather-alert-triangle"
        fill="none"
        id="warning"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 001.71 3h16.94a2 2 0 001.71-3L13.71 3.86a2 2 0 00-3.42 0zM12 9v4M12 17h.01"
        />
      </symbol>
    </svg>
  </IconSprite>
</div>
`;
